<resources>
    <string name="app_name">Project 10 - Wilton Tuji</string>
    <string name="add_new_product_title">Add new product</string>
    <string name="edit_product_title">Edit product</string>
    <string name="error_saving_product">Error with saving the product.</string>
    <string name="saving_product_succesful">Saving product succesful.</string>
    <string name="error_updating_product">Error with updating product.</string>
    <string name="updating_product_succesful">Updating product succesful.</string>
    <string name="ok">Ok</string>
    <string name="insert_product_name">Please, insert the product name.</string>
    <string name="insert_product_price">Please, insert the product price.</string>
    <string name="insert_product_quantity">Please, insert the product quantity.</string>
    <string name="insert_product_descrption">Please, insert product description.</string>
    <string name="insert_seller_name">Please, insert seller name.</string>
    <string name="insert_seller_email">Please, inser seller email.</string>
    <string name="error_deleting_product">Error with deleting product.</string>
    <string name="deleting_product_succesful">Deleting product succesful.</string>
    <string name="insert_order_quantity">Insert the quantity of the product to order.</string>
    <string name="insert_restock_quantity">Insert the restock quantity.</string>
    <string name="send_order">Send order.</string>
    <string name="new_order">New product order</string>
    <string name="email_text_part1_of_2">Please, send me </string>
    <string name="email_text_part2_of_2"> units of the </string>
    <string name="send_email">Send email</string>
    <string name="insert_sale_quantity">Please, insert the quantity of the product to sell.</string>
    <string name="sale">Sell</string>
    <string name="requesting_more_than_available">You cannot sell more than available in the stock.</string>
    <string name="have_unsaved_changes">Seems that you have unsaved changes. Do you really want to go back?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="request_from_seller">Request from seller</string>
    <string name="save_product">Save product</string>
    <string name="delete_product">Delete product</string>
    <string name="insert_product_menu">Insert product</string>
    <string name="delete_all">Delete all products</string>
    <string name="empty_deposit">Your deposit seems to be empty right now</string>
    <string name="quantity">Quantity</string>
    <string name="price">Price</string>
    <string name="out_of_stock">Out of stock</string>
    <string name="product_name">Product name</string>
    <string name="description">Description</string>
    <string name="seller_name">Seller name</string>
    <string name="seller_email">Seller email</string>
    <string name="restock">Restock product</string>
    <string name="sell_product">Sell product</string>
    <string name="save">Save</string>
    <string name="bought_one">You have bought one item!</string>
    <string name="delete_product_confirmation">Do you really want to delete this product?</string>
    <string name="delete_all_products_confirmation">Do you really want to delete ALL the products?</string>
    <string name="no_products_populated">You dont have any products in the list to delete.</string>

</resources>
