<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context="com.example.android.project10_wiltontuji.EditorActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/views_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/product_name" />

                <EditText
                    android:id="@+id/name_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="16dp"
                    android:inputType="textCapSentences" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/price" />

                <EditText
                    android:id="@+id/price_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="16dp"
                    android:inputType="numberDecimal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/quantity" />

                <EditText
                    android:id="@+id/quantity_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="16dp"
                    android:inputType="number" />
            </LinearLayout>

            <ImageView
                android:id="@+id/take_photo_image_view"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="2"
                android:background="@drawable/photo_borders"
                android:src="@drawable/add_photo" />

        </LinearLayout>

        <TextView
            android:id="@+id/description_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/views_group"
            android:text="@string/description" />

        <EditText
            android:id="@+id/description_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/description_text_view"
            android:inputType="textCapSentences|textMultiLine" />

        <TextView
            android:id="@+id/seller_name_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/description_edit_text"
            android:text="@string/seller_name" />

        <EditText
            android:id="@+id/seller_name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_below="@id/seller_name_text_view"
            android:inputType="textCapWords" />

        <TextView
            android:id="@+id/seller_email_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/seller_name_edit_text"
            android:text="@string/seller_email" />

        <EditText
            android:id="@+id/seller_email_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/seller_email_text_view"
            android:inputType="textEmailAddress" />

        <LinearLayout
            android:id="@+id/buttons_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/seller_email_edit_text"
            android:orientation="horizontal">

            <Button
                android:id="@+id/request_product_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/seller_email_edit_text"
                android:layout_weight="1"
                android:text="@string/request_from_seller" />

            <Button
                android:id="@+id/restock_product_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/request_product_button"
                android:layout_weight="1"
                android:text="@string/restock" />

        </LinearLayout>

        <Button
            android:id="@+id/sale_product_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/buttons_layout"
            android:text="@string/sell_product"
            android:layout_centerHorizontal="true"/>

        <Button
            android:id="@+id/save_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/sale_product_button"
            android:layout_centerHorizontal="true"
            android:text="@string/save" />

    </RelativeLayout>

</ScrollView>

